# masterthesis-vision-benchmark

./: LICENSE  README.md  make.wiki  new file
OpenCLExample/: DeviceQuery.cpp  DeviceQuery.h  DeviceQuery.h.gch  a.out  error.txt  example  jang.cpp  k  kernels.ocl  main.cpp
benchmarkt/: AlgoConvolv.py  AlgoConvolv20.py  AlgoFacedect.py  AlgoMatrixMul.py  benchmarkt.py  benshmarkt.py  convolv  convolv.cpp  convolv20  convolv20.cpp  facedetect  facedetect.cpp  facedtect  linux_algorithm.txt  matrixcpp  matrixcpp.cpp  pixelbewerking.py  pixeltransform.cpp  pixeltransformation.py  pxltransform  python_algorithm.txt  readSerialVictor70C.py  run10.bash  testZip.py  testconv  webcamTest.py
facedetection python/: 2018_05_08_07_52_15_result_LAPTOP-TPLGCH9G_Windows.json  2018_05_08_09_59_57_result_LAPTOP-TPLGCH9G_Windows.json  AlgoConvolv.py  AlgoFacedect.py  AlgoMatrixMul.py  benshmarkt.py  convolv.cpp  face.pyproj  facedectMultiProcessing.py  facedection  facedetect  facedetect.cpp  hey  linux_algorithm.txt  pixeltransformation.py  python_algorithm.txt  readSerialVictor70C.py  test.py  (+2 more)
zineddine/src/: CMakeLists.txt
zineddine/src/erosion/: CMakeLists.txt  erosion.cpp
zineddine/src/get_binaries/: CMakeLists.txt  get_binaries.cpp
zineddine/src/matrix_vector/: CMakeLists.txt  matrix_vector.cpp
zineddine/src/opencl_events/: CMakeLists.txt  opencl_events.cpp
zineddine/src/platforms_devices/: CMakeLists.txt  platforms_devices.cpp
zineddine/src/simple_opencl/: CMakeLists.txt  simple_opencl.cpp
zineddine/src/workspace_query/: CMakeLists.txt  workspace_query.cpp
(+288 files in other folders)
